# aerovert-de

./: .gitignore  Makefile  README.md  docker-compose.yml
apps/api/: Dockerfile  nixpacks.toml  pyproject.toml  requirements.txt
apps/api/app/: config.py  main.py
apps/api/app/db/: models.py  session.py
apps/api/app/scripts/: debug_excel.py  enable_postgis.py  ingest_csv.py  ingest_expert.py  process_obstacles.py
apps/api/data/data/raw/2025/EDGG/: 05_EDGG.xls  11_EDGG.xls
apps/api/data/data/raw/2025/EDMM/: 01_EDMM.xls  08_EDMM.xls
apps/api/data/data/raw/2025/EDWW/: 01_EDWW.xls  03_EDWW.xls  05_EDWW.xls  06_EDWW.xls  08_EDWW.xls  09_EDWW.xls  12_EDWW.xls
apps/api/data/raw/2025/EDGG/: 01_EDGG.xls  03_EDGG.xls  06_EDGG.xls  08_EDGG.xls  09_EDGG.xls  10_EDGG.xls  12_EDGG.xls
apps/api/data/raw/2025/EDMM/: 02_EDMM.xls  04_EDMM.xls  05_EDMM.xls  10_EDMM.xls  11_EDMM.xls
apps/api/data/raw/2025/EDWW/: 02_EDWW.xls  04_EDWW.xls  07_EDWW.xls  10_EDWW.xls  11_EDWW.xls
apps/api/migrations/: env.py
apps/api/migrations/versions/: 8d4c03981910_initial_tables_v2.py  f8b1efa8c939_clean_init.py
apps/api/src/app/: config.py  main.py
apps/api/src/app/db/: base.py  models.py  session.py
apps/api/src/app/scripts/: process_obstacles.py
apps/api/src/app/services/: parser.py
apps/web/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: Sidebar.tsx
apps/web/src/context/: ObstacleContext.tsx
data/raw/2025/EDGG/: 02_EDGG.xls  04_EDGG.xls  07_EDGG.xls
(+8 files in other folders)
