[project]
name = "aerovert-api"
version = "0.1.0"
description = "Backend API and ETL pipeline for Aerovert-DE"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "geoalchemy2>=0.14.3",
    "pandas>=2.2.0",
    "openpyxl>=3.1.2",
    "python-multipart>=0.0.9",
]

[tool.uv]
# This replaces the deprecated dev-dependencies
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
    "ruff>=0.2.1",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ==============================================================================
# CRITICAL FIX: Explicitly tell hatchling where the source code is
# ==============================================================================
[tool.hatch.build.targets.wheel]
packages = ["app"]

# ------------------------------------------------------------------------------
# Tool Configurations
# ------------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]